deploy/k8s/forensic-logging-sidecar-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: forensic-logging-sidecar
spec:
  rules:
    - host: forensic-logging-sidecar.local
      http:
        paths:
        - backend:
            serviceName: forensic-logging-sidecar
            servicePort: 5678
